--- a/.config
+++ b/.config
@@ -4056,7 +4056,7 @@ CONFIG_MEDIA_SUPPORT=m
 CONFIG_MEDIA_ANALOG_TV_SUPPORT=y
 CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
 # CONFIG_MEDIA_RADIO_SUPPORT is not set
-# CONFIG_MEDIA_SDR_SUPPORT is not set
+CONFIG_MEDIA_SDR_SUPPORT=y
 CONFIG_MEDIA_RC_SUPPORT=y
 CONFIG_VIDEO_DEV=m
 CONFIG_VIDEO_V4L2=m
@@ -4098,7 +4098,9 @@ CONFIG_VIDEO_PVRUSB2_DVB=y
 CONFIG_VIDEO_HDPVR=m
 CONFIG_VIDEO_TLG2300=m
 CONFIG_VIDEO_USBVISION=m
-# CONFIG_VIDEO_STK1160_COMMON is not set
+CONFIG_VIDEO_STK1160_COMMON=m
+CONFIG_VIDEO_STK1160_AC97=y
+CONFIG_VIDEO_STK1160=m
 CONFIG_VIDEO_GO7007=m
 CONFIG_VIDEO_GO7007_USB=m
 CONFIG_VIDEO_GO7007_LOADER=m
@@ -4136,11 +4138,6 @@ CONFIG_DVB_USB_VP7045=m
 CONFIG_DVB_USB_VP702X=m
 CONFIG_DVB_USB_GP8PSK=m
 CONFIG_DVB_USB_NOVA_T_USB2=m
-CONFIG_DVB_USB_TBSQBOX=m
-CONFIG_DVB_USB_TBSQBOX2=m
-CONFIG_DVB_USB_TBSQBOXS2=m
-CONFIG_DVB_USB_TBSQBOX2CI=m
-CONFIG_DVB_USB_TBS5925=m
 CONFIG_DVB_USB_TTUSB2=m
 CONFIG_DVB_USB_DTT200U=m
 CONFIG_DVB_USB_OPERA1=m
@@ -4153,6 +4150,13 @@ CONFIG_DVB_USB_DTV5100=m
 CONFIG_DVB_USB_FRIIO=m
 CONFIG_DVB_USB_AZ6027=m
 CONFIG_DVB_USB_TECHNISAT_USB2=m
+CONFIG_DVB_USB_TBSQBOX=m
+CONFIG_DVB_USB_TBSQBOX2=m
+CONFIG_DVB_USB_TBSQBOX22=m
+CONFIG_DVB_USB_TBSQBOXS2=m
+CONFIG_DVB_USB_TBSQBOX2CI=m
+CONFIG_DVB_USB_TBS5925=m
+CONFIG_DVB_USB_TBS5880=m
 CONFIG_DVB_USB_V2=m
 CONFIG_DVB_USB_AF9015=m
 CONFIG_DVB_USB_AF9035=m
@@ -4180,6 +4184,12 @@ CONFIG_VIDEO_EM28XX=m
 # CONFIG_VIDEO_EM28XX_ALSA is not set
 CONFIG_VIDEO_EM28XX_DVB=m
 # CONFIG_VIDEO_EM28XX_RC is not set
+
+#
+# Software defined radio USB devices
+#
+CONFIG_USB_MSI2500=m
+CONFIG_USB_AIRSPY=m
 CONFIG_MEDIA_PCI_SUPPORT=y
 
 #
@@ -4364,6 +4374,7 @@ CONFIG_MEDIA_TUNER_TDA8290=m
 CONFIG_MEDIA_TUNER_TDA827X=m
 CONFIG_MEDIA_TUNER_TDA18271=m
 CONFIG_MEDIA_TUNER_TDA9887=m
+CONFIG_MEDIA_TUNER_MSI001=m
 CONFIG_MEDIA_TUNER_MT20XX=m
 CONFIG_MEDIA_TUNER_MT2060=m
 CONFIG_MEDIA_TUNER_MT2063=m
@@ -4389,6 +4400,7 @@ CONFIG_MEDIA_TUNER_TUA9001=m
 CONFIG_MEDIA_TUNER_SI2157=m
 CONFIG_MEDIA_TUNER_IT913X=m
 CONFIG_MEDIA_TUNER_R820T=m
+CONFIG_MEDIA_TUNER_AV201X=m
 
 #
 # Multistandard (satellite) frontends
@@ -4460,6 +4472,7 @@ CONFIG_DVB_STV0367=m
 CONFIG_DVB_CXD2820R=m
 CONFIG_DVB_RTL2830=m
 CONFIG_DVB_RTL2832=m
+CONFIG_DVB_RTL2832_SDR=m
 CONFIG_DVB_SI2168=m
 CONFIG_DVB_AS102_FE=m
 
@@ -4516,6 +4529,7 @@ CONFIG_DVB_TDA665x=m
 CONFIG_DVB_IX2505V=m
 CONFIG_DVB_M88RS2000=m
 CONFIG_DVB_AF9033=m
+CONFIG_DVB_TAS2101=m
 
 #
 # Tools to develop new frontends
