update .config for linuxtv pull

--- a/.config
+++ b/.config
@@ -4210,6 +4210,7 @@ CONFIG_VIDEO_HEXIUM_GEMINI=m
 CONFIG_VIDEO_HEXIUM_ORION=m
 CONFIG_VIDEO_MXB=m
 # CONFIG_VIDEO_SOLO6X10 is not set
+# CONFIG_VIDEO_TW68 is not set
 
 #
 # Media capture/analog/hybrid TV support
