some Kworld 445 fixes, still doesnt work but Im getting there

--- a/.config
+++ b/.config
@@ -4287,9 +4287,13 @@ CONFIG_SMS_SIANO_MDTV=m
 #
 # Media ancillary drivers (tuners, sensors, i2c, frontends)
 #
-CONFIG_MEDIA_SUBDRV_AUTOSELECT=y
+# CONFIG_MEDIA_SUBDRV_AUTOSELECT is not set
 CONFIG_MEDIA_ATTACH=y
 CONFIG_VIDEO_IR_I2C=m
+
+#
+# Encoders, decoders, sensors and other helper chips
+#
 
 #
 # Audio decoders, processors and mixers
@@ -4302,11 +4306,12 @@ CONFIG_VIDEO_TEA6420=m
 CONFIG_VIDEO_MSP3400=m
 CONFIG_VIDEO_CS5345=m
 CONFIG_VIDEO_CS53L32A=m
+CONFIG_VIDEO_TLV320AIC23B=m
 CONFIG_VIDEO_UDA1342=m
 CONFIG_VIDEO_WM8775=m
 CONFIG_VIDEO_WM8739=m
 CONFIG_VIDEO_VP27SMPX=m
-CONFIG_VIDEO_SONY_BTF_MPX=m
+# CONFIG_VIDEO_SONY_BTF_MPX is not set
 
 #
 # RDS decoders
@@ -4316,12 +4321,19 @@ CONFIG_VIDEO_SAA6588=m
 #
 # Video decoders
 #
+CONFIG_VIDEO_ADV7180=m
+CONFIG_VIDEO_ADV7183=m
 CONFIG_VIDEO_BT819=m
 CONFIG_VIDEO_BT856=m
 CONFIG_VIDEO_BT866=m
 CONFIG_VIDEO_KS0127=m
+CONFIG_VIDEO_ML86V7667=m
 CONFIG_VIDEO_SAA7110=m
 CONFIG_VIDEO_SAA711X=m
+CONFIG_VIDEO_SAA7191=m
+CONFIG_VIDEO_TVP514X=m
+CONFIG_VIDEO_TVP5150=m
+CONFIG_VIDEO_TVP7002=m
 CONFIG_VIDEO_TW2804=m
 CONFIG_VIDEO_TW9903=m
 CONFIG_VIDEO_TW9906=m
@@ -4340,11 +4352,14 @@ CONFIG_VIDEO_SAA7127=m
 CONFIG_VIDEO_SAA7185=m
 CONFIG_VIDEO_ADV7170=m
 CONFIG_VIDEO_ADV7175=m
+CONFIG_VIDEO_ADV7343=m
+CONFIG_VIDEO_ADV7393=m
+CONFIG_VIDEO_AK881X=m
+CONFIG_VIDEO_THS8200=m
 
 #
 # Camera sensor devices
 #
-CONFIG_VIDEO_OV7640=m
 
 #
 # Flash devices
@@ -4364,17 +4379,25 @@ CONFIG_VIDEO_SAA6752HS=m
 #
 # Miscellaneous helper chips
 #
+CONFIG_VIDEO_THS7303=m
 CONFIG_VIDEO_M52790=m
 
 #
 # Sensors used on soc_camera driver
 #
 CONFIG_MEDIA_TUNER=m
+
+#
+# Customize TV tuners
+#
 CONFIG_MEDIA_TUNER_SIMPLE=m
 CONFIG_MEDIA_TUNER_TDA8290=m
 CONFIG_MEDIA_TUNER_TDA827X=m
 CONFIG_MEDIA_TUNER_TDA18271=m
+CONFIG_MEDIA_TUNER_TDA18272=m
 CONFIG_MEDIA_TUNER_TDA9887=m
+CONFIG_MEDIA_TUNER_TEA5761=m
+CONFIG_MEDIA_TUNER_TEA5767=m
 CONFIG_MEDIA_TUNER_MSI001=m
 CONFIG_MEDIA_TUNER_MT20XX=m
 CONFIG_MEDIA_TUNER_MT2060=m
@@ -4404,12 +4427,19 @@ CONFIG_MEDIA_TUNER_R820T=m
 CONFIG_MEDIA_TUNER_AV201X=m
 
 #
+# Customise DVB Frontends
+#
+
+#
 # Multistandard (satellite) frontends
 #
 CONFIG_DVB_STB0899=m
 CONFIG_DVB_STB6100=m
 CONFIG_DVB_STV090x=m
 CONFIG_DVB_STV6110x=m
+CONFIG_DVB_CXD2817=m
+CONFIG_DVB_CXD2861=m
+CONFIG_DVB_CXD2850=m
 CONFIG_DVB_M88DS3103=m
 
 #
@@ -4456,6 +4486,7 @@ CONFIG_DVB_SP8870=m
 CONFIG_DVB_SP887X=m
 CONFIG_DVB_CX22700=m
 CONFIG_DVB_CX22702=m
+CONFIG_DVB_S5H1432=m
 CONFIG_DVB_DRXD=m
 CONFIG_DVB_L64781=m
 CONFIG_DVB_TDA1004X=m
@@ -4466,9 +4497,11 @@ CONFIG_DVB_DIB3000MB=m
 CONFIG_DVB_DIB3000MC=m
 CONFIG_DVB_DIB7000M=m
 CONFIG_DVB_DIB7000P=m
+CONFIG_DVB_DIB9000=m
 CONFIG_DVB_TDA10048=m
 CONFIG_DVB_AF9013=m
 CONFIG_DVB_EC100=m
+CONFIG_DVB_HD29L2=m
 CONFIG_DVB_STV0367=m
 CONFIG_DVB_CXD2820R=m
 CONFIG_DVB_RTL2830=m
@@ -4498,6 +4531,7 @@ CONFIG_DVB_LG2160=m
 CONFIG_DVB_S5H1409=m
 CONFIG_DVB_AU8522=m
 CONFIG_DVB_AU8522_DTV=m
+CONFIG_DVB_AU8522_V4L=m
 CONFIG_DVB_S5H1411=m
 
 #
@@ -4524,6 +4558,9 @@ CONFIG_DVB_ISL6405=m
 CONFIG_DVB_ISL6421=m
 CONFIG_DVB_ISL6423=m
 CONFIG_DVB_A8293=m
+CONFIG_DVB_A8290=m
+CONFIG_DVB_SP2=m
+CONFIG_DVB_LGS8GL5=m
 CONFIG_DVB_LGS8GXX=m
 CONFIG_DVB_ATBM8830=m
 CONFIG_DVB_TDA665x=m
